# hint

./: CMakeLists.txt
cmake/: FindAPInt.cmake
config/: test_bitint.cpp  test_signed_bitint_1.cpp
include/: hint.hpp
include/arithmetic/: bitheap.hpp
include/arithmetic/detail/: bitheap.hpp
include/backend/: bitint_impl.ipp  extint_impl.ipp
include/bitint_tools/: bitint_constant.hpp  manipulation.hpp  type_helpers.hpp
include/expression/: signal.hpp  value.hpp
include/extint_tools/: manipulation.hpp  type_helpers.hpp
tests/: CMakeLists.txt
tests/arithmetic/: CMakeLists.txt  bitheap.cpp
tests/backend/: CMakeLists.txt  bitint_arithmetic.cpp  bitint_logic.cpp  bitint_main.cpp
tests/bitint_tools/: CMakeLists.txt  bitint_tests.cpp
tests/expression/: CMakeLists.txt  expression.cpp
tests/primitives/: CMakeLists.txt
