if(VIVADO_BACKEND)
	add_executable(testVivadoBackend_exe vivado_main.cpp vivado_table.cpp)
	target_link_libraries(testVivadoBackend_exe hint Boost::unit_test_framework HINT_VIVADO_BACKEND)
	add_test(testVivadoBackend testVivadoBackend_exe)
endif()

if(INTEL_BACKEND)
    add_executable(testIntelBackend_exe intel_main.cpp intel_table.cpp)
    target_link_libraries(testIntelBackend_exe hint Boost::unit_test_framework)
    target_include_directories(testIntelBackend_exe PRIVATE ${INTEL_INCLUDES})
    target_compile_definitions(testIntelBackend_exe PRIVATE INTEL_BACKEND)
    add_test(testIntelBackend testIntelBackend_exe)
endif()

if(CATAPULT_BACKEND)
    add_executable(testCatapultBackend_exe catapult_main.cpp)
    target_link_libraries(testCatapultBackend_exe hint Boost::unit_test_framework)
    target_compile_definitions(testCatapultBackend_exe PRIVATE CATAPULT_BACKEND)
    add_test(testCatapultBackend testCatapultBackend_exe)
endif()

if(EXTINT_BACKEND)
    add_executable(testExtIntBackend_exe extint_main extint_arithmetic extint_logic)
    target_link_libraries(testExtIntBackend_exe hint Boost::unit_test_framework)
    target_compile_definitions(testExtIntBackend_exe PRIVATE EXTINT_BACKEND)
    add_test(testExtIntBackend testExtIntBackend_exe)
endif()
