if(VIVADO_BACKEND OR INTEL_BACKEND)
    add_executable(testPrimitives_exe lzoc_shifter_and_shifter_sticky_main.cpp)
    target_link_libraries(testPrimitives_exe PRIVATE hint ${Boost_LIBRARIES})
    target_include_directories(testPrimitives_exe PRIVATE ${Boost_INCLUDE_DIR})
    if(VIVADO_BACKEND)
        target_link_libraries(testPrimitives_exe PRIVATE HINT_VIVADO_BACKEND)
    endif()
    if(INTEL_BACKEND)
        target_include_directories(testPrimitives_exe PRIVATE ${INTEL_INCLUDES})
        target_compile_definitions(testPrimitives_exe PRIVATE INTEL_BACKEND)
    endif()
        add_test(testPrimitives testPrimitives_exe)
endif()
